--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -31,8 +31,10 @@ data:
     }
   index.html: |
     <!DOCTYPE html>
-    <html>
+    <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ArgoCD Demo App</title>
         <style>
             body { font-family: Arial, sans-serif; margin: 40px; background: #f5f5f5; }
